--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>image permission</string>
 	<key>NSCameraUsageDescription</key>
 	<string>image permission</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>location permission</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>location permission</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
